fix(notifications settings): fix layout on mobile

--- a/astro_2.0/features/Notifications/components/NotificationCollapsableSettings/NotificationCollapsableSettings.module.scss
+++ b/astro_2.0/features/Notifications/components/NotificationCollapsableSettings/NotificationCollapsableSettings.module.scss
@@ -48,7 +48,11 @@
     @include ellipse-text;
     display: block;
     line-height: 1.2;
-    width: 270px;
+    max-width: 120px;
+
+    @include tablet-landscape {
+      max-width: 210px;
+    }
   }
 
   .sub {
