--- a/astro_2.0/features/Notifications/components/PlatformNotificationSettings/PlatformNotificationSettings.module.scss
+++ b/astro_2.0/features/Notifications/components/PlatformNotificationSettings/PlatformNotificationSettings.module.scss
@@ -43,8 +43,7 @@
 }
 
 .settingsItem {
-  padding-bottom: 24px;
-  padding-left: 12px;
+  padding: 0 12px 24px;
 
   &.muted {
     opacity: 0.5;
